--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker Image Sync to Aliyun ACR
 
 on:
   workflow_dispatch:
@@ -21,8 +21,8 @@ jobs:
           echo "Initial disk space:"
           df -h /
 
-      # 安全清理：只删除无用软件包，不创建大文件
-      - name: Maximize build space (safe mode)
+      # 安全清理：仅移除无用软件包，不启用 LVM
+      - name: Maximize build space (NO LVM!)
         uses: easimon/maximize-build-space@master
         with:
           root-reserve-mb: 2048
@@ -31,53 +31,63 @@ jobs:
           remove-haskell: 'true'
           remove-android: 'true'
           remove-codeql: 'true'
+          # ⚠️ 注意：未设置 temp-reserve-mb 等任何 LVM 参数！
 
-      - name: Disk space after cleanup
+      - name: Disk space after basic cleanup
         run: |
-          echo "Disk space after cleanup:"
+          echo "Disk space after software cleanup:"
           df -h /
 
-      - name: Cleanup residual files and deactivate LVM
+      # === 强力清理：应对可能的历史 LVM 残留（仅一次或兜底）===
+      - name: Cleanup LVM and residual files (properly)
         run: |
-          echo "Deactivating LVM volumes..."
-          sudo vgchange -an buildvg || true
+          echo "=== Step 1: Turn off LVM-based swap ==="
+          if swapon --show | grep -q '/dev/mapper/buildvg-swap'; then
+            echo "Disabling swap on /dev/mapper/buildvg-swap"
+            sudo swapoff /dev/mapper/buildvg-swap || true
+          fi
 
-          echo "Removing loop devices..."
-          for dev in $(losetup -a | grep -E '(/pv\.img|/mnt/tmp-pv\.img)' | cut -d: -f1); do
-            echo "Detaching $dev"
-            sudo losetup -d "$dev" || true
-          done
+          echo "=== Step 2: Deactivate logical volumes ==="
+          sudo lvchange -an buildvg 2>/dev/null || true
 
-          echo "Deleting residual files..."
+          echo "=== Step 3: Deactivate volume group ==="
+          sudo vgchange -an buildvg 2>/dev/null || true
+
+          echo "=== Step 4: Remove physical volumes ==="
+          sudo pvremove -ff /dev/loop0 /dev/loop1 2>/dev/null || true
+
+          echo "=== Step 5: Detach loop devices ==="
+          sudo losetup -d /dev/loop0 2>/dev/null || true
+          sudo losetup -d /dev/loop1 2>/dev/null || true
+
+          echo "=== Step 6: Delete image files ==="
           sudo rm -f /pv.img /mnt/tmp-pv.img
 
-          echo "Final disk space after cleanup:"
+          echo "=== Final disk space after LVM cleanup ==="
           df -h /
 
+      # 验证是否真的清理干净
       - name: Verify no LVM artifacts remain
         run: |
-          if [ -f /pv.img ]; then
-            echo "ERROR: /pv.img still exists!" >&2
-            ls -lh /pv.img
+          if [ -e /pv.img ] || [ -e /mnt/tmp-pv.img ]; then
+            echo "❌ ERROR: LVM image files still exist!" >&2
+            ls -lh /pv.img /mnt/tmp-pv.img 2>/dev/null || true
             exit 1
           fi
-          if [ -f /mnt/tmp-pv.img ]; then
-            echo "ERROR: /mnt/tmp-pv.img still exists!" >&2
-            ls -lh /mnt/tmp-pv.img
-            exit 1
-          fi
-          echo "✅ No LVM artifacts found."
+          echo "✅ No LVM artifacts — disk is clean."
 
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install skopeo (for direct image copy)
-        run: sudo apt-get update && sudo apt-get install -y skopeo
+      - name: Install skopeo (for direct registry-to-registry copy)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y skopeo
 
-      - name: Login to Aliyun Registry
+      - name: Login to Aliyun Container Registry
         run: |
           echo "$ALIYUN_REGISTRY_PASSWORD" | skopeo login \
-            $ALIYUN_REGISTRY \
+            "$ALIYUN_REGISTRY" \
             --username "$ALIYUN_REGISTRY_USER" \
             --password-stdin
 
@@ -88,39 +98,46 @@ jobs:
             [[ -z "$line" ]] && continue
             [[ "$line" =~ ^[[:space:]]*# ]] && continue
 
-            # Extract source image (last field, remove platform if present)
+            # Extract source image (last field, remove platform suffix like @sha256:...)
             src_image=$(echo "$line" | awk '{print $NF}' | sed 's/@.*$//')
             echo "Processing: $src_image"
 
-            # Parse image components
+            # Parse image name and tag
             image_name_tag=$(echo "$src_image" | awk -F'/' '{print $NF}')
             image_name=$(echo "$image_name_tag" | awk -F':' '{print $1}')
-            tag=$(echo "$image_name_tag" | awk -F':' '{print $2; if(NF==1) print "latest"}')
+            tag=$(echo "$image_name_tag" | awk -F':' '{print ($2 == "" ? "latest" : $2)}')
 
-            # Handle namespace (docker.io/nginx → docker.io_nginx)
+            # Handle namespace (e.g., docker.io/library/nginx → docker.io_library_nginx)
             if [[ "$src_image" == *"/"* ]]; then
-              ns_part=$(echo "$src_image" | awk -F'/' '{if(NF==3) print $2; else if(NF==2) print $1}')
+              parts=(${src_image//\// })
+              if [[ ${#parts[@]} -eq 3 ]]; then
+                ns_part="${parts[0]}_${parts[1]}"
+              elif [[ ${#parts[@]} -eq 2 ]]; then
+                ns_part="${parts[0]}"
+              else
+                ns_part=""
+              fi
             else
               ns_part=""
             fi
 
             # Build destination image name
             if [[ -n "$ns_part" ]]; then
-              dest_image="$ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/${ns_part}_${image_name}:${tag}"
+              dest_image="$ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/${ns_part}_${image_name}:$tag"
             else
               dest_image="$ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/$image_name:$tag"
             fi
 
             echo "Copying to: $dest_image"
 
-            # Direct copy without local storage
-            skopeo copy \
-              "docker://$src_image" \
-              "docker://$dest_image"
-
+            # Direct registry-to-registry copy (no local storage)
+            if ! skopeo copy "docker://$src_image" "docker://$dest_image"; then
+              echo "❌ Failed to sync $src_image" >&2
+              exit 1
+            fi
           done < images.txt
 
-      - name: Final disk check
+      - name: Final disk space check
         run: |
           echo "Final disk space:"
           df -h /
